add injection, small fixes

--- a/GoogleSearchImageTest/Views/Home/Index.cshtml
+++ b/GoogleSearchImageTest/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                 <div class="search-item col-sm-3" ng-hide="item.Deleted">
                     <div class="img-wrap">
                         <div class="close" ng-click="main.deleteItem(item)">&times;</div>
-                        <img src="{{item.src}}" alt="{{item.title}}" class="img-responsive img-thumbnail center-block">
+                        <img src="{{item.src}}" alt="{{item.title}}" class="img-responsive img-thumbnail">
                     </div>
                     <div class="file-name">
                         <a href="{{item.src}}" download>{{item.fileName}} </a>
