--- a/GoogleSearchImageTest/Content/Site.css
+++ b/GoogleSearchImageTest/Content/Site.css
@@ -26,8 +26,8 @@ div.search-item {
     padding: 3px;
     width: 200px;
     height: 200px;
-    display: inline-block;
-    overflow-wrap: break-word;    
+    display: block;
+    overflow: hidden;  
 }
 
 div.file-name {
@@ -50,8 +50,8 @@ div.save-result {
 .img-wrap .close {
     position: absolute;
     top: 2px;
-    right: 2px;
+    right: 4px;
     z-index: 100;
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
 }
 
