--- a/GoogleSearchImageTest/Content/Site.css
+++ b/GoogleSearchImageTest/Content/Site.css
@@ -14,25 +14,26 @@ div.row {
 }
 
 div.arch-search {
-
 }
 
-div.searh-box {   
+div.searh-box {
     border-right-style: solid;
     border-right-width: 1px;
 }
 
 div.search-item {
-    padding: 3px;
-    width: 200px;
-    height: 200px;
-    display: block;
-    overflow: hidden;  
+    margin: 3px;
+    padding: 20px;
+    width: 24%;
+    height: 300px;
+    display: inline-block;
+    overflow: hidden;
 }
 
 div.file-name {
-    padding-top: 3px;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 div.search-result-items {
@@ -44,14 +45,14 @@ div.save-result {
     border-top-width: 1px;
     padding-top: 3px;
 }
+
 .img-wrap {
     position: relative;
 }
-.img-wrap .close {
-    position: absolute;
-    top: 2px;
-    right: 4px;
-    z-index: 100;
-    /*background-color: #ffffff;*/
-}
 
+    .img-wrap .close {
+        position: absolute;
+        top: 2px;
+        right: 3px;
+        z-index: 100;
+    }
