add ninject , js fixing

--- a/GoogleSearchImageTest/Views/Home/Delete.cshtml
+++ b/GoogleSearchImageTest/Views/Home/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GoogleSearchImageTest.Models.SearchResult
+﻿@model GoogleSearchImageDomain.Entities.SearchResult
 
 @{
     ViewBag.Title = "Delete";
