--- a/GoogleSearchImageTest/Views/Home/Index.cshtml
+++ b/GoogleSearchImageTest/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GoogleSearchImageTest.Models.SearchResult>
+﻿@model GoogleSearchImageTest.Models.SearchResultViewModel
 
 @{
     ViewBag.Title = "Index";
