--- a/GoogleSearchImageTest/Views/Shared/_Layout.cshtml
+++ b/GoogleSearchImageTest/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Image searcher</title>
 
     @Styles.Render("~/bundles/css")
     @Styles.Render("~/bundles/angular_css")
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Image searcher</p>
         </footer>
     </div>
 
