--- a/GoogleSearchImageTest/Views/Home/Index.cshtml
+++ b/GoogleSearchImageTest/Views/Home/Index.cshtml
@@ -55,9 +55,9 @@
             <button type="button" class="btn btn-primary btn-sm" ng-click="main.saveResult()">Save search results</button>
         </div>
     </div>
-    <div class="col-xs-6 col-md-4 arch-search">
+    <div class="col-xs-6 col-md-4 arch-box">
         <div class="text-center alert-info">Previous results - {{main.previousResults.length}}</div>
-        <div>Search by name: <input ng-model="searchText"></div>
+        <div class="col-sm-12 arch-search">Search by name: <input ng-model="searchText" class="col-sm-12"></div>
         <table class="table table-bordered table-hover">
             <tr>
                 <th>
